--- a/DotaLeague/DotaLeague/DotaLeague.csproj
+++ b/DotaLeague/DotaLeague/DotaLeague.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ApplicationServices\ApplicationServices.csproj" />
+    <ProjectReference Include="..\Common\Utils\Utils.csproj" />
     <ProjectReference Include="..\SqlDataAccess\SqlDataAccess.csproj" />
   </ItemGroup>
 
