--- a/DotaLeague/ApplicationServices/ApplicationServices.csproj
+++ b/DotaLeague/ApplicationServices/ApplicationServices.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Common\Utils\Utils.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
