--- a/DotaLeague/Domain/Domain.csproj
+++ b/DotaLeague/Domain/Domain.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="ServiceInterfaces\" />
+    <Compile Remove="ServiceInterfaces\**" />
+    <EmbeddedResource Remove="ServiceInterfaces\**" />
+    <None Remove="ServiceInterfaces\**" />
   </ItemGroup>
 
 </Project>
